[gd_scene load_steps=4 format=3 uid="uid://cfpsr7deyg6s"]

[ext_resource type="Script" uid="uid://ca2qlrgk50xiw" path="res://barkley2/scenes/_Godot_Combat/stat_progress.gd" id="1_au82e"]
[ext_resource type="Texture2D" uid="uid://coa1p3j3lpmkh" path="res://barkley2/assets/ui/bar/frame_bg.png" id="2_owets"]
[ext_resource type="Texture2D" uid="uid://hsnk4iiirru7" path="res://barkley2/assets/ui/bar/frame_fg.png" id="3_rjty7"]

[node name="stat_progress" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_au82e")

[node name="bg_frame" type="TextureRect" parent="."]
modulate = Color(0.431373, 0.0392157, 0.117647, 1)
layout_mode = 0
offset_left = -15.0
offset_top = -4.0
offset_right = 15.0
offset_bottom = 4.0
texture = ExtResource("2_owets")

[node name="stat_bar" type="TextureRect" parent="."]
modulate = Color(0.862745, 0.0784314, 0.235294, 1)
layout_mode = 0
offset_left = -15.0
offset_top = -4.0
offset_right = 6.0
offset_bottom = 4.0
texture = ExtResource("2_owets")

[node name="stat_top_frame" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = -4.0
offset_right = 16.0
offset_bottom = 4.0
texture = ExtResource("3_rjty7")
patch_margin_left = 6
patch_margin_top = 4
patch_margin_right = 6
patch_margin_bottom = 4
